[package]
name = "wefund"
version = "17.2.3"
authors = ["Alenzer <alenzer@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""


[dependencies]
cw-storage-plus = "0.12.1"
cw2 = "0.12.1"
cw20 = "0.12.1"
# cosmwasm-bignumber = "2.2.0"
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

Interface = { path = "../../packages/Interface", default-features = false, version = "0.0.1" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
